Fix form margin on small screens

--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -1078,7 +1078,6 @@ input[type="radio"] {
 
 @media (max-width: 600px) {
   .payment-form {
-    margin: 0px;
     padding: 30px;
     box-sizing: border-box;
   }
